[gd_scene load_steps=15 format=2]

[ext_resource path="res://element/background.png" type="Texture" id=1]
[ext_resource path="res://element/about.png" type="Texture" id=2]
[ext_resource path="res://element/exit.png" type="Texture" id=3]
[ext_resource path="res://element/point.png" type="Texture" id=4]
[ext_resource path="res://element/judul.png" type="Texture" id=5]
[ext_resource path="res://element/caterpillar (1).png" type="Texture" id=6]
[ext_resource path="res://element/play.png" type="Texture" id=7]
[ext_resource path="res://element/fly.png" type="Texture" id=8]
[ext_resource path="res://element/help.png" type="Texture" id=9]
[ext_resource path="res://element/tanaman.png" type="Texture" id=10]
[ext_resource path="res://script/Main Menu.gd" type="Script" id=11]
[ext_resource path="res://element/no.png" type="Texture" id=12]
[ext_resource path="res://element/pop up exit.png" type="Texture" id=13]
[ext_resource path="res://element/yes.png" type="Texture" id=14]

[node name="Main Menu" type="Node2D"]
script = ExtResource( 11 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 539.012, 299.739 )
scale = Vector2( 0.307255, 0.241738 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 558.009, 141.993 )
scale = Vector2( 0.207913, 0.184828 )
texture = ExtResource( 5 )

[node name="tanaman" type="Sprite" parent="."]
position = Vector2( 550.295, 224.487 )
scale = Vector2( 0.170741, 0.126973 )
texture = ExtResource( 10 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 983.346, 44.0639 )
scale = Vector2( 0.0451422, 0.0359619 )
texture = ExtResource( 4 )

[node name="button" type="Node2D" parent="."]
position = Vector2( 456.51, 292.647 )

[node name="cacing" type="Sprite" parent="button"]
position = Vector2( -141.265, 56.397 )
scale = Vector2( 0.178097, 0.110232 )
texture = ExtResource( 6 )

[node name="lalat" type="Sprite" parent="button"]
position = Vector2( 378.179, 88.657 )
rotation = 0.675442
scale = Vector2( 0.28087, 0.244838 )
texture = ExtResource( 8 )

[node name="help" type="TextureButton" parent="button"]
margin_left = -243.73
margin_top = 83.579
margin_right = -54.73
margin_bottom = 156.579
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="TextureButton" parent="button"]
margin_right = 189.0
margin_bottom = 73.0
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="about" type="TextureButton" parent="button"]
margin_left = 237.948
margin_top = 84.712
margin_right = 426.948
margin_bottom = 157.712
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="TextureButton" parent="button"]
margin_left = -1.21301
margin_top = 176.608
margin_right = 187.787
margin_bottom = 249.608
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pop up exit" type="Sprite" parent="."]
visible = false
position = Vector2( 548.442, 405.79 )
scale = Vector2( 0.212284, 0.212284 )
texture = ExtResource( 13 )

[node name="btn_yes" type="TextureButton" parent="pop up exit"]
margin_left = -1304.63
margin_top = 202.967
margin_right = -402.635
margin_bottom = 519.967
texture_normal = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_no" type="TextureButton" parent="pop up exit"]
margin_left = 404.679
margin_top = 202.967
margin_right = 1306.68
margin_bottom = 519.967
texture_normal = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="button/help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="button/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="button/about" to="." method="_on_about_pressed"]
[connection signal="button_up" from="button/exit" to="." method="_on_exit_button"]
[connection signal="button_up" from="pop up exit/btn_yes" to="." method="_exit_yes"]
[connection signal="button_up" from="pop up exit/btn_no" to="." method="_exit_no"]
